aws-alb-ingress-controller-echoserver/echoserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/target-type: ip
    # Adding tags to subnets for auto-discovery(instead of alb.ingress.kubernetes.io/subnets annotation)
    # you must include the following tags on desired subnets.
    # kubernetes.io/cluster/$CLUSTER_NAME where $CLUSTER_NAME is the same CLUSTER_NAME specified in the above step.
    # kubernetes.io/role/internal-elb should be set to 1 or an empty tag value for internal load balancers.
    # kubernetes.io/role/elb should be set to 1 or an empty tag value for internet-facing load balancers.
    alb.ingress.kubernetes.io/subnets: subnet-05e1c98ed0f5b109e,subnet-07f5bb81f661df61b,subnet-0a4e6232630820516
spec:
  rules:
    - host: echoserver.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: echoserver
              servicePort: 80
